tests/errors/sem.invalid-type.accessee-type.or
main :: () -> void {
    a := 5;
    a[10];
};
